User: Added edit and upload profile picture

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,18 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h4><%= @user.email %></h4>
+
+<%= image_tag(@user.profile_picture(:thumb)) %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+
+  <div class="field">
+    <div><strong>Upload Profile Picture</strong></div>
+    <%= f.label :image %>:
+    <%= f.fields_for :image, @image do |image_form| %>
+      <%= image_form.file_field :image %>
+    <% end %>
+  </div>
 
   <div class="field">
     <%= f.label :first_name %><br />
