--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <h4><%= @user.email %></h4>
 
-<%= image_tag(@user.profile_picture(:thumb)) %>
+<%= image_tag(@user.profile_picture(:thumb), class: 'img_preview') %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
