--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+<div class='row'>
+    <div class='col-md-6 col-md-offset-3'>
+    <div class='form-devise'>
+      <h1>Resend confirmation instructions</h1>
+      <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control', placeholder: 'Enter Email Address' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='actions'>
+            <%= f.submit 'Resend confirmation instructions', class: 'btn btn-lg btn-primary center-block' %>
+          </div>
+        </div>
+      <% end %>
+      <div class='clearfix'></div>
+      <%= render 'devise/shared/links' %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
