--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,36 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+<div class='row'>
+  <div class='col-md-6 col-md-offset-3'>
+    <div class='form-devise'>
+      <div class='devise-heading'>Change your password</div>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+        <%= f.hidden_field :reset_password_token %>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :password, 'New password' %>
+            <div class='clearfix'></div>
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <div class='clearfix'></div>
+            <% end %>
+            <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control', placeholder: 'Enter New Password' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :password_confirmation, 'Confirm new password' %>
+            <div class='clearfix'></div>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control', placeholder: 'Re-enter New Password' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='actions'>
+            <%= f.submit 'Change my password', class: 'btn btn-lg btn-primary center-block' %>
+          </div>
+        </div>
+      <% end %>
+      <div class='clearfix'></div>
+      <%= render 'devise/shared/links' %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
