--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class='row'>
+  <div class='col-md-6 col-md-offset-3'>
+    <div class='form-devise'>
+      <div class='devise-heading'>Forgot your password?</div>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Enter Email Address' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='actions'>
+            <%= f.submit 'Send me reset password instructions', class: 'btn btn-lg btn-primary center-block' %>
+          </div>
+        </div>
+      <% end %>
+      <%= render 'devise/shared/links' %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
