--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,69 +1,89 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-<h4><%= @user.email %></h4>
-
-<%= image_tag(@user.profile_picture(:thumb)) %>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <div><strong>Upload Profile Picture</strong></div>
-    <%= f.label :image %>:
-    <%= f.fields_for :image, @image do |image_form| %>
-      <%= image_form.file_field :image %>
-    <% end %>
+<div class='row'>
+  <div class='col-md-6 col-md-offset-3'>
+    <div class='form-devise'>
+      <div class='devise-heading'>Edit <%= resource_name.to_s.humanize %>:
+        <h4><%= @user.first_name %>
+        <%= @user.last_name %></h4>
+      </div>
+      <br/>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+        <div><strong>Upload Profile Picture</strong></div>
+        <%= image_tag(@user.profile_picture(:thumb), class: 'img-circle img-responsive') %>
+        <br/>
+        <div class='form-group'>
+          <div class="field">
+            <%= f.label :image %>
+            <%= f.fields_for :image, @image do |image_form| %>
+              <%= image_form.file_field :image %>
+            <% end %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :first_name %>
+            <div class='clearfix'></div>
+            <%= f.text_field :first_name, autofocus: true, class: 'form-control', placeholder: 'Enter your first name' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :last_name %>
+            <div class='clearfix'></div>
+            <%= f.text_field :last_name, autofocus: true, class: 'form-control', placeholder: 'Enter your last name' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :city %>
+            <div class='clearfix'></div>
+            <%= f.text_field :city, autofocus: true, class: 'form-control', placeholder: 'Enter the name of your city' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :email %>
+            <div class='clearfix'></div>
+            <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Enter Email Address' %>
+          </div>
+        </div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
+            <div class='clearfix'></div>
+            <%= f.password_field :password, autocomplete: 'off', class: 'form-control', placeholder: 'Enter New Password' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :password_confirmation %>
+            <div class='clearfix'></div>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control', placeholder: 'Re-enter Password' %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+            <div class='clearfix'></div>
+            <%= f.password_field :current_password, autocomplete: 'off', class: 'form-control', placeholder: 'Enter Current Password', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='actions'>
+            <%= f.submit 'Update', class: 'btn btn-lg btn-success center-block' %>
+          </div>
+        </div>
+      <% end %>
+      <div class='clearfix'></div>
+      <div>
+        <h3>Cancel my account</h3>
+        <p>Unhappy? <%= button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-sm btn-danger center-block' %></p>
+      </div>
+      <div class='clearfix'></div>
+      <%= link_to 'Back', :back %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
