--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,62 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+<div class='row'>
+  <div class='col-md-6 col-md-offset-3'>
+    <div class='form-devise'>
+      <h1 class='devise-heading'>Sign Up</h1>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :first_name %>
+            <div class='clearfix'></div>
+            <%= f.text_field :first_name, autofocus: true, class: 'form-control', placeholder: 'Enter your first name', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :last_name %>
+            <div class='clearfix'></div>
+            <%= f.text_field :last_name, autofocus: true, class: 'form-control', placeholder: 'Enter your last name', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :city %>
+            <div class='clearfix'></div>
+            <%= f.text_field :city, autofocus: true, class: 'form-control', placeholder: 'Enter the name of your city', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :email %>
+            <div class='clearfix'></div>
+            <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Enter Email Address', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+              <em class='alert'>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <div class='clearfix'></div>
+            <%= f.password_field :password, autocomplete: 'off', class: 'form-control', placeholder: 'Enter Password', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='field'>
+            <%= f.label :Confirm_Password %>
+            <div class='clearfix'></div>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control', placeholder: 'Re-enter Password', required: true %>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='actions'>
+            <%= f.submit 'Sign Up', class: 'btn btn-lg btn-success center-block' %>
+          </div>
+        </div>
+      <% end %>
+      <div class='clearfix'></div>
+      <%= render 'devise/shared/links' %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
