--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-12'>
+      <div class='col-md-offset-2'></div>
+      <div class='form-devise'>
+        <h1>Resend Unlock Instructions</h1>
+        <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+          <%= devise_error_messages! %>
+          <div class='form-group'>
+            <div class='field'>
+              <%= f.label :email %>
+              <div class='clearfix'></div>
+              <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Enter Email Address' %>
+            </div>
+          </div>
+          <div class='form-group'>
+            <div class='actions'>
+              <%= f.submit 'Resend unlock instructions', class: 'btn btn-lg btn-primary center-block' %>
+            </div>
+          </div>
+        <% end %>
+        <div class='clearfix'></div>
+        <%= render 'devise/shared/links' %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
