Page: Added home page with movie panels

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,3 +60,12 @@ h3 {
 .navbar-inverse {
   font-weight: bold;
 }
+
+.movie-img {
+  display: table;
+  margin: auto;
+}
+
+.movie-title {
+  color: #073061;
+}
