--- a/app/views/pages/_movies.html.erb
+++ b/app/views/pages/_movies.html.erb
@@ -1,5 +1,5 @@
 <% movies.each do |movie| %>
-  <div class='col-md-4'>
+  <div class='margin-padded-space col-md-4'>
     <div class='text-center'>
       <strong><%= movie.title %></strong>
     </div>
