--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,11 +11,27 @@
         <div class='collapse navbar-collapse'>
           <ul class='nav navbar-nav pull-right'>
             <% if !user_signed_in? %>
-              <li><%= link_to ' Sign Up', new_user_registration_path, class: 'navbar-link glyphicon glyphicon-user' %></li>
-              <li><%= link_to ' Sign In', new_user_session_path, class: 'navbar-link glyphicon glyphicon-log-in' %></li>
+              <li>
+                <%= link_to new_user_registration_path, class: 'navbar-link' do %>
+                  <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Sign Up
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path, class: 'navbar-link' do %>
+                  <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Sign In
+                <% end %>
+              </li>
             <% else %>
-              <li><%= link_to ' Edit Profile', edit_user_registration_path, class: 'navbar-link glyphicon glyphicon-home' %></li>
-              <li><%= link_to ' Sign Out', destroy_user_session_path, method: :delete, class: 'navbar-link glyphicon glyphicon-log-out' %></li>
+              <li>
+                <%= link_to edit_user_registration_path, class: 'navbar-link' do %>
+                  <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Profile
+                <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete, class: 'navbar-link' do %>
+                  <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Sign Out
+                <% end %>
+              </li>
             <% end %>
           </ul>
         </div>
