--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,6 +6,7 @@
 <%= render partial: 'movies', locals: { movies: @latest_movies } %>
 </div>
 
+<div class='clearfix'></div>
 <div class='margin-padded-space text-center movie-title'>
   <h2>Featured Movies</h2>
 </div>
@@ -14,6 +15,7 @@
 <%= render partial: 'movies', locals: { movies: @featured_movies } %>
 </div>
 
+<div class='clearfix'></div>
 <div class='margin-padded-space text-center movie-title'>
   <h2>Top Movies</h2>
 </div>
