--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -39,7 +39,7 @@
     </div>
   </nav>
 
-  <div class='site-title margin-padded-space'>
+  <div class='site-title'>
     Movie Management System
   </div>
 </div>
