--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ body {
 .margin-padded-space {
   padding: 6px;
   margin-bottom: 6px;
-  margin-top: 6px;
+  margin-top:10px;
 }
 
 .site-title {
@@ -36,21 +36,38 @@ body {
   margin: 0 auto;
   margin-top: 36px;
   text-align: center;
+  color: #444;
+  background-color: #DDD;
 }
 
 h1 {
   font-weight: bold;
   font-size: 26px;
+  color: #474444;
 }
 
 h2 {
   font-weight: bold;
   font-size: 24px;
+  color: #474444;
 }
 
 h3 {
-  font-weight: normal;
+  font-weight: bold;
   font-size: 20px;
+  color: #474444;
+}
+
+h4 {
+  font-weight: bold;
+  font-size: 18px;
+  color: #474444;
+}
+
+strong {
+  font-weight: bold;
+  font-size: 16px;
+  color: #474444;
 }
 
 .header-content {
@@ -67,5 +84,64 @@ h3 {
 }
 
 .movie-title {
-  color: #073061;
+  color: #565656;
+}
+
+.button {
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+.movie-heading {
+  color: #073601;
+}
+
+.movie-description {
+  padding-top: 20px;
+}
+
+.element-padding {
+  padding-left: 14px;
+}
+
+.breadcrumb-padding {
+  margin-left: 14px;
+}
+
+.heading-space {
+  padding-bottom: 40px;
+}
+
+body {
+  background-color: #575656;
+}
+
+.container {
+  padding-top: 10px;
+  background-color: white;
+}
+
+.page-header {
+  background-color: white;
+  margin-bottom: 14px;
+  padding-bottom: 0px;
+  border-bottom: 0px;
+}
+
+.notice-content {
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+.review-space {
+  padding-top: 20px;
+  padding-left: 14px;
+}
+
+.movie-poster-container {
+  width: 300px;
+}
+
+.movie-poster-container img {
+  width: 300px;
 }
