--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,2 +1,7 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div class='notice-content'>
+  <% if notice %>
+    <div class='alert alert-success'><%= notice %></div>
+  <% elsif alert %>
+    <div class='alert alert-danger'><%= alert %></div>
+  <% end %>
+</div>
