--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
   <%= render 'layouts/notice' %>
 
   <div class='container'>
+    <div class='breadcrumb-padding'>
+      <%= render_breadcrumbs %>
+    </div>
+    <hr>
     <%= yield %>
   </div>
 
