Review: Added review functionality

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,7 +133,7 @@ body {
   margin: 0 auto;
 }
 
-.review-space {
+.reviews-space {
   padding-top: 20px;
   padding-left: 14px;
 }
@@ -144,4 +144,29 @@ body {
 
 .movie-poster-container img {
   width: 300px;
+}
+
+.review-box {
+  width: 66%;
+}
+
+.review-options {
+  padding-left: 200px;
+}
+
+.review-msg-space {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.img-review {
+  padding-left: 6px;
+}
+
+.user-review {
+  padding-left: 0px;
+}
+
+.review-owner-options {
+  padding-left: 159px;
 }
