--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,4 @@
-<div id='review-id-<%= review.id %>'>
+<div id='review_<%= review.id %>'>
   <div class='clearfix'></div>
   <div class='margin-padded-space'>
     <div class='row'>
