--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@movie, @review], remote: form_option) do |f| %>
+<%= form_for([@movie, @review], remote: form_option, html: { id: 'review-form-id' }) do |f| %>
   <% if @review.errors.any? %>
     <div id='error_explanation'>
       <h2><%= pluralize(@review.errors.count, 'error') %> prohibited this review from being saved:</h2>
