--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,7 @@
+<%= link_to 'View All', movies_path, class: 'pull-right button btn btn-md btn-primary' %>
+
+<div class='clearfix'></div>
+
 <div class='margin-padded-space text-center movie-title'>
   <h2>Latest Movies</h2>
 </div>
